--- a/adminAbout.html
+++ b/adminAbout.html
@@ -41,9 +41,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="home.html"><strong>Home</strong></a></li>
+								<li class="current"><a href="adminHome.html"><strong>Home</strong></a></li>
 								<li>
-									<a href="books.html"><strong>Books</strong></a>
+									<a href="adminBooks.html"><strong>Books</strong></a>
 									<ul>
 										<li><a href="#">Non-fiction</a></li>
 										<li><a href="#">Education</a></li>
@@ -53,8 +53,9 @@
 										<li><a href="#">Philosophy</a></li>
 									</ul>
 								</li>
-								<li><a href="userProfile.html"><strong>User Profile</strong></a></li>
-								<li><a href="about.html"><strong>About</strong></a></li>
+								<li><a href="adminUsers.html"><strong>Users</strong></a></li>
+								<li><a href="adminProfile.html"><strong>User Profile</strong></a></li>
+								<li><a href="adminAbout.html"><strong>About</strong></a></li>
 								
 								<!--Add logout link here-->
 								<li><a href=""><strong>Logout</strong></a></li>
