--- a/adminUsers.html
+++ b/adminUsers.html
@@ -18,6 +18,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/users.css" />
 
 		<!--The icon beside the title on the website's tab on the browser, change directory accordingly.-->
 		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
@@ -74,54 +75,26 @@
 									<div id="sidebar">
 										<section class="box">
 											<header>
-												<h2>Categories</h2>
+												<h2>General Information</h2>
 											</header>
 											<ul class="style2">
 												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/nonfic.png" alt="" /></a>
-														<h3><a href="#">Non-fiction</a></h3>
-														<p>Based on factual information and real events, providing readers with an opportunity to learn and expand their knowledge on various topics.</p>
+													<article class="box">
+														<h3>Active users: &lt;Insert value here&gt;</h3>
 													</article>
 												</li>
 												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/edu.png" alt="" /></a>
-														<h3><a href="#">Education</a></h3>
-														<p>Designed to help readers acquire new knowledge and skills, and to improve their understanding of specific subjects. </p>
+													<article class="box">
+														<h3>Total number of visits: &lt;Insert value here&gt;</h3>
 													</article>
 												</li>
 												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/fic.png" alt="" /></a>
-														<h3><a href="#">Fiction</a></h3>
-														<p>books are works of the imagination, taking readers on a journey to new worlds, introducing them to new characters and telling them stories that entertain, inspire and move.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/literature.png" alt="" /></a>
-														<h3><a href="#">Literature</a></h3>
-														<p>Recognized for literary value, cultural importance, and complex themes, challenging readers to think deeply and critically.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/entert.png" alt="" /></a>
-														<h3><a href="#">Entertainment</a></h3>
-														<p>Provides readers with enjoyment and amusement, makes them laugh or feel entertained, and offer an escape from reality.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/philo.png" alt="" /></a>
-														<h3><a href="#">Philosphy</a></h3>
-														<p>Explore fundamental questions about existence, reality, and values, insights into the human condition, moral and ethical dilemmas, and the nature of knowledge and truth. </p>
+													<article class="box">
+														<h3>Number of borrowed books: &lt;Insert value here&gt;</h3>
 													</article>
 												</li>
 											</ul>
-											<a href="#" class="button style3">Add Category</a>
-											<a href="#" class="button style3" style="width: 208px; margin-top: 20px;">Add Book</a>
+											<a href="#" class="button style3">Add User</a>
 										</section>
 									</div>
 
@@ -137,62 +110,86 @@
 								<!-- Content -->
 									<div id="content">
 
-										<div class="row gtr-150">
-											<div class="col-4 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h2>Title: Text here</h2>
-													</header>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-4 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h2>Title: Text here</h2>
-													</header>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-4 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h2>Title: Text here</h2>
-													</header>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-4 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h2>Title: Text here</h2>
-													</header>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-4 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h2>Title: Text here</h2>
-													</header>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-4 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h2>Title: Text here</h2>
-													</header>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-										</div>
+										<table>
+										  <tr>
+										    <th>Name</th>
+										    <th>Grade</th>
+										    <th>Section</th>
+										    <th>Email</th>
+										    <th>Delete?</th>
+										  </tr>
+										  <tr>
+										    <td>Person#1</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#2</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#3</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#4</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#5</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#6</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#7</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#8</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#9</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										  <tr>
+										    <td>Person#10</td>
+										    <td>Insert Grade</td>
+										    <td>Insert Section</td>
+										    <td>Insert Email</td>
+										    <th><span><ion-icon name="trash-outline" style="margin-left: 23px;"></ion-icon></span></th>
+										  </tr>
+										</table>
+										
 									</div>
 
 							</div>
@@ -290,6 +287,8 @@
 		</div>
 
 		<!-- Scripts -->
+			<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+			<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
