--- a/adminHome.html
+++ b/adminHome.html
@@ -36,9 +36,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="home.html"><strong>Home</strong></a></li>
+								<li class="current"><a href="adminHome.html"><strong>Home</strong></a></li>
 								<li>
-									<a href="books.html"><strong>Books</strong></a>
+									<a href="adminBooks.html"><strong>Books</strong></a>
 									<ul>
 										<li><a href="#">Non-fiction</a></li>
 										<li><a href="#">Education</a></li>
@@ -48,8 +48,9 @@
 										<li><a href="#">Philosophy</a></li>
 									</ul>
 								</li>
-								<li><a href="userProfile.html"><strong>User Profile</strong></a></li>
-								<li><a href="about.html"><strong>About</strong></a></li>
+								<li><a href="adminUsers.html"><strong>Users</strong></a></li>
+								<li><a href="adminProfile.html"><strong>User Profile</strong></a></li>
+								<li><a href="adminAbout.html"><strong>About</strong></a></li>
 								
 								<!--Add logout link here-->
 								<li><a href=""><strong>Logout</strong></a></li>
@@ -66,10 +67,10 @@
 							Well you're in luck!<br class="mobile-hide" />
 						</p>
 						<p class="style1">
-							This website is created for the library of Yverdon de Pestallozi School, Inc.<br> for your convenience in discovering books.
+							This website is created for the library of Yverdon de Pestallozi School, Inc. for your convenience in discovering books.
 						</p>
 						<ul class="actions">
-							<li><a href="books.html" class="button style3 large">Proceed</a></li> 
+							<li><a href="adminBooks.html" class="button style3 large">Proceed</a></li> 
 						</ul>
 					</div>
 				</section>
