--- a/adminProfile.html
+++ b/adminProfile.html
@@ -42,9 +42,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="home.html"><strong>Home</strong></a></li>
+								<li class="current"><a href="adminHome.html"><strong>Home</strong></a></li>
 								<li>
-									<a href="books.html"><strong>Books</strong></a>
+									<a href="adminBooks.html"><strong>Books</strong></a>
 									<ul>
 										<li><a href="#">Non-fiction</a></li>
 										<li><a href="#">Education</a></li>
@@ -54,8 +54,9 @@
 										<li><a href="#">Philosophy</a></li>
 									</ul>
 								</li>
-								<li><a href="userProfile.html"><strong>User Profile</strong></a></li>
-								<li><a href="about.html"><strong>About</strong></a></li>
+								<li><a href="adminUsers.html"><strong>Users</strong></a></li>
+								<li><a href="adminProfile.html"><strong>User Profile</strong></a></li>
+								<li><a href="adminAbout.html"><strong>About</strong></a></li>
 								
 								<!--Add logout link here-->
 								<li><a href=""><strong>Logout</strong></a></li>
@@ -65,7 +66,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Right Sidebar</div>
+					<div class="title">User Profile</div>
 					<div class="container">
 						<div class="row gtr-150">
 							<div class="col-8 col-12-medium">
@@ -86,7 +87,7 @@
 											</div>
 											<input id="imageUpload" type="file" name="profile_photo" placeholder="Photo" required="" capture>
 
-											<p><strong>Information</strong><br> School: <br> Academic level: <br> Grade & Section: </p>
+											<p><strong>Information</strong><br> School: <br> Position: </p>
 											<p><strong>Contacts</strong><br> Email: </p>
 
 											<button class="editInfo style3">Edit</button>
